TF8040 Samples: - update TcHmiBa packages to 1.2.0 and use newest PLC libraries;

--- a/Template Samples/HMI/TF8040 Template Samples HMI/packages.config
+++ b/Template Samples/HMI/TF8040 Template Samples HMI/packages.config
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Beckhoff.TwinCAT.HMI.BA.Controls" version="1.4.0" targetFramework="native1.12-tchmi" />
-  <package id="Beckhoff.TwinCAT.HMI.BA.Framework" version="1.4.0" targetFramework="native1.12-tchmi" />
-  <package id="Beckhoff.TwinCAT.HMI.BA.Icons" version="1.4.0" targetFramework="native1.12-tchmi" />
-  <package id="Beckhoff.TwinCAT.HMI.BA.ServerExtension" version="1.4.0" targetFramework="native1.12-tchmi" />
+  <package id="Beckhoff.TwinCAT.HMI.BA.BaExtension" version="2.0.0-nextMajor1" targetFramework="native1.12-tchmi" />
+  <package id="Beckhoff.TwinCAT.HMI.BA.Controls" version="2.0.0-nextMajor1" targetFramework="native1.12-tchmi" />
+  <package id="Beckhoff.TwinCAT.HMI.BA.Framework" version="2.0.0-nextMajor1" targetFramework="native1.12-tchmi" />
+  <package id="Beckhoff.TwinCAT.HMI.BA.Icons" version="2.0.0-nextMajor1" targetFramework="native1.12-tchmi" />
   <package id="Beckhoff.TwinCAT.HMI.Controls" version="12.754.4" allowedVersions="[,13)" targetFramework="native1.12-tchmi" />
   <package id="Beckhoff.TwinCAT.HMI.Framework" version="12.754.4" allowedVersions="[,13)" targetFramework="native1.12-tchmi" />
   <package id="Beckhoff.TwinCAT.HMI.Functions" version="12.754.4" allowedVersions="[,13)" targetFramework="native1.12-tchmi" />
