--- a/APIs/C#/TerminalClient/S01-SimpleRead/S01-SimpleRead.csproj
+++ b/APIs/C#/TerminalClient/S01-SimpleRead/S01-SimpleRead.csproj
@@ -10,7 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="Beckhoff.TwinCAT.Ads" Version="5.0.492" />
-    <PackageReference Include="Beckhoff.TwinCAT.BA.TerminalClient" Version="2.2.52-beta24" />
+    <PackageReference Include="Beckhoff.TwinCAT.BA.TerminalClient" Version="2.3.0-nextMaster12" />
   </ItemGroup>
 
 </Project>
