--- a/APIs/C#/TerminalClient/S20-Customize/S20-Customize.csproj
+++ b/APIs/C#/TerminalClient/S20-Customize/S20-Customize.csproj
@@ -10,7 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="Beckhoff.TwinCAT.Ads" Version="5.0.492" />
-    <PackageReference Include="Beckhoff.TwinCAT.BA.TerminalClient" Version="2.3.0-beta4" />
+    <PackageReference Include="Beckhoff.TwinCAT.BA.SiteApi" Version="3.0.0-MD-RenameRefer1" />
   </ItemGroup>
 
 </Project>
