--- a/Pipelines/CreateSampleArchive.yml
+++ b/Pipelines/CreateSampleArchive.yml
@@ -7,6 +7,8 @@ parameters:
   type: string
 - name: sampleName
   type: string
+- name: archivesFolder
+  type: string
 
 steps:
 
@@ -19,7 +21,7 @@ steps:
     rootFolderOrFile: ./${{parameters.sampleName}}/HMI
     includeRootFolder: false
     archiveType: zip
-    archiveFile: archives/${{parameters.sampleName}}/HMI/TF8040 ${{parameters.sampleName}} HMI V1.${{parameters.version}}.zip
+    archiveFile: ${{parameters.archivesFolder}}/${{parameters.sampleName}}/TF8040 ${{parameters.sampleName}} HMI.zip
 
 #------------------------------------------------------------------------------------
 # Archive PLC project
@@ -30,4 +32,4 @@ steps:
     rootFolderOrFile: ./${{parameters.sampleName}}/PLC
     includeRootFolder: false
     archiveType: zip
-    archiveFile: archives/${{parameters.sampleName}}/PLC/TF8040 ${{parameters.sampleName}} PLC V1.${{parameters.version}}.zip
+    archiveFile: ${{parameters.archivesFolder}}/${{parameters.sampleName}}/TF8040 ${{parameters.sampleName}} PLC.zip
