Samples PLC: Change to ADS 6 / net6

--- a/APIs/C#/TerminalClient/S20-Customize/S20-Customize.csproj
+++ b/APIs/C#/TerminalClient/S20-Customize/S20-Customize.csproj
@@ -2,15 +2,15 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <RootNamespace>S20_Customize</RootNamespace>
     <AssemblyVersion>1.0.1.0</AssemblyVersion>
     <FileVersion>1.0.1.0</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Beckhoff.TwinCAT.Ads" Version="5.0.492" />
-    <PackageReference Include="Beckhoff.TwinCAT.BA.SiteApi" Version="3.0.0-MD-RenameRefer1" />
+    <PackageReference Include="Beckhoff.TwinCAT.Ads" Version="6.*" />
+    <PackageReference Include="Beckhoff.TwinCAT.BA.SiteApi" Version="4.0.0-beta15" />
   </ItemGroup>
 
 </Project>
