Samples SiteApi: Add `Lazy` sample

--- a/APIs/C#/TerminalClient/S11-Lazy/S11-Lazy.csproj
+++ b/APIs/C#/TerminalClient/S11-Lazy/S11-Lazy.csproj
@@ -3,14 +3,14 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
-    <RootNamespace>S20_Customize</RootNamespace>
+    <RootNamespace>S11_Lazy</RootNamespace>
     <AssemblyVersion>1.0.1.0</AssemblyVersion>
     <FileVersion>1.0.1.0</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Beckhoff.TwinCAT.Ads" Version="6.*" />
-    <PackageReference Include="Beckhoff.TwinCAT.BA.SiteApi" Version="4.0.0-beta15" />
+    <PackageReference Include="Beckhoff.TwinCAT.BA.SiteApi" Version="4.0.0-beta37" />
   </ItemGroup>
 
 </Project>
