--- a/APIs/C#/TerminalClient/S21-RawAds/S21-RawAds.csproj
+++ b/APIs/C#/TerminalClient/S21-RawAds/S21-RawAds.csproj
@@ -1,9 +1,9 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
-    <RootNamespace>S05_SimpleWrite</RootNamespace>
+    <RootNamespace>S21_Customize</RootNamespace>
     <AssemblyVersion>1.0.1.0</AssemblyVersion>
     <FileVersion>1.0.1.0</FileVersion>
   </PropertyGroup>
