Samples SiteApi: Add debug solution
Added debug solution for internal purposes

--- a/APIs/C#/SiteApi/Samples.SiteApi.csproj
+++ b/APIs/C#/SiteApi/Samples.SiteApi.csproj
@@ -7,7 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="Beckhoff.TwinCAT.Ads" Version="6.*" />
-    <PackageReference Include="Beckhoff.TwinCAT.BA.SiteApi" Version="4.0.0-beta37" />
+    <PackageReference Include="Beckhoff.TwinCAT.BA.SiteApi" Version="4.*" />
   </ItemGroup>
 
 </Project>
