Tc3_BA2: Rename to `FB_BA_LoopSeq`
Related work items: #108568

--- a/Template Samples/HMI/TF8040 Template Samples HMI/Server/TcHmiSrv/TcHmiSrv.Config.default.json
+++ b/Template Samples/HMI/TF8040 Template Samples HMI/Server/TcHmiSrv/TcHmiSrv.Config.default.json
@@ -4450,7 +4450,7 @@
                             "$ref": "#/definitions/BaVar.System.Single"
                         },
                         "iSynchronizedLoop": {
-                            "$ref": "#/definitions/BaVar.Tc3_BA2.I_BA_Loop"
+                            "$ref": "#/definitions/BaVar.Tc3_BA2.I_BA_LoopSeq"
                         },
                         "nDampConstant": {
                             "$ref": "#/definitions/BaVar.System.UInt32"
@@ -4540,7 +4540,7 @@
                             "$ref": "#/definitions/BaVar.System.Single"
                         },
                         "iSynchronizedLoop": {
-                            "$ref": "#/definitions/BaVar.Tc3_BA2.I_BA_Loop"
+                            "$ref": "#/definitions/BaVar.Tc3_BA2.I_BA_LoopSeq"
                         },
                         "nDampConstant": {
                             "$ref": "#/definitions/BaVar.System.UInt32"
@@ -5088,7 +5088,7 @@
             },
             "type": "object"
         },
-        "BaVar.Tc3_BA2.I_BA_Loop": {
+        "BaVar.Tc3_BA2.I_BA_LoopSeq": {
             "additionalProperties": false,
             "properties": {
                 "Value": {
