--- a/Conecpt Samples/HMI/TF8040 Concept Samples HMI/Server/TcHmiSrv/TcHmiSrv.Config.default.json
+++ b/Conecpt Samples/HMI/TF8040 Concept Samples HMI/Server/TcHmiSrv/TcHmiSrv.Config.default.json
@@ -5263,7 +5263,7 @@
                             "$ref": "#/definitions/BaVar.System.Single"
                         },
                         "iSynchronizedLoop": {
-                            "$ref": "#/definitions/BaVar.Tc3_BA2.I_BA_Loop"
+                            "$ref": "#/definitions/BaVar.Tc3_BA2.I_BA_LoopSeq"
                         },
                         "nDampConstant": {
                             "$ref": "#/definitions/BaVar.System.UInt32"
@@ -6585,7 +6585,7 @@
             },
             "type": "object"
         },
-        "BaVar.Tc3_BA2.I_BA_Loop": {
+        "BaVar.Tc3_BA2.I_BA_LoopSeq": {
             "additionalProperties": false,
             "properties": {
                 "Value": {
