--- a/Template Samples/HMI/TF8040 Template Samples HMI/Properties/tchmiconfig.json
+++ b/Template Samples/HMI/TF8040 Template Samples HMI/Properties/tchmiconfig.json
@@ -1,5 +1,5 @@
 ﻿{
-  "$schema": "./../../Packages/Beckhoff.TwinCAT.HMI.Framework.12.754.4/runtimes/native1.12-tchmi/Schema/TchmiConfig.Schema.json",
+  "$schema": "./../../Packages/Beckhoff.TwinCAT.HMI.Framework.12.758.8/runtimes/native1.12-tchmi/Schema/TchmiConfig.Schema.json",
   "basePath": "./framework",
   "scaleMode": "None",
   "startupView": "Desktop.view",
@@ -118,7 +118,8 @@
         "persist": false,
         "readonly": false
       }
-    }
+    },
+    "themedResources": {}
   },
   "trigger": [
     {
