--- a/Template Samples/HMI/TF8040 Template Samples HMI/Server/BaSite/BaSite.Config.default.json
+++ b/Template Samples/HMI/TF8040 Template Samples HMI/Server/BaSite/BaSite.Config.default.json
@@ -1,7 +1,11 @@
 {
+    "EVENTSETTINGS": {
+        "EVENTHISTORYLIMIT": 40000,
+        "EVENTHISTORYTHRESHOLD": 4000
+    },
     "INTERVAL": 2000,
     "RUNTIMES": {
-        "PLC1": {
+        "IFP01": {
             "ENABLED": true,
             "NETID": "127.0.0.1.1.1",
             "PORT": 851
