--- a/Template Samples/HMI/TF8040 Template Samples HMI/packages.config
+++ b/Template Samples/HMI/TF8040 Template Samples HMI/packages.config
@@ -1,11 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Beckhoff.TwinCAT.HMI.BA.BaExtension" version="2.0.0-nextMajor1" targetFramework="native1.12-tchmi" />
-  <package id="Beckhoff.TwinCAT.HMI.BA.Controls" version="2.0.0-nextMajor1" targetFramework="native1.12-tchmi" />
-  <package id="Beckhoff.TwinCAT.HMI.BA.Framework" version="2.0.0-nextMajor1" targetFramework="native1.12-tchmi" />
-  <package id="Beckhoff.TwinCAT.HMI.BA.Icons" version="2.0.0-nextMajor1" targetFramework="native1.12-tchmi" />
-  <package id="Beckhoff.TwinCAT.HMI.Controls" version="12.754.4" allowedVersions="[,13)" targetFramework="native1.12-tchmi" />
-  <package id="Beckhoff.TwinCAT.HMI.Framework" version="12.754.4" allowedVersions="[,13)" targetFramework="native1.12-tchmi" />
-  <package id="Beckhoff.TwinCAT.HMI.Functions" version="12.754.4" allowedVersions="[,13)" targetFramework="native1.12-tchmi" />
-  <package id="Beckhoff.TwinCAT.HMI.ResponsiveNavigation" version="12.754.4" targetFramework="native1.12-tchmi" />
+  <package id="Beckhoff.TwinCAT.HMI.BA.BaSite" version="2.2.0-beta8" targetFramework="native1.12-tchmi" />
+  <package id="Beckhoff.TwinCAT.HMI.BA.Controls" version="2.2.0-beta8" targetFramework="native1.12-tchmi" />
+  <package id="Beckhoff.TwinCAT.HMI.BA.Framework" version="2.2.0-beta8" targetFramework="native1.12-tchmi" />
+  <package id="Beckhoff.TwinCAT.HMI.BA.Icons" version="2.2.0-beta8" targetFramework="native1.12-tchmi" />
+  <package id="Beckhoff.TwinCAT.HMI.Controls" version="12.758.8" allowedVersions="[,13)" targetFramework="native1.12-tchmi" />
+  <package id="Beckhoff.TwinCAT.HMI.Framework" version="12.758.8" allowedVersions="[,13)" targetFramework="native1.12-tchmi" />
+  <package id="Beckhoff.TwinCAT.HMI.Functions" version="12.758.8" allowedVersions="[,13)" targetFramework="native1.12-tchmi" />
+  <package id="Beckhoff.TwinCAT.HMI.ResponsiveNavigation" version="12.758.8" targetFramework="native1.12-tchmi" />
+  <package id="Microsoft.TypeScript.MSBuild" version="4.6.4" developmentDependency="true" targetFramework="native1.12-tchmi" />
 </packages>
