Pipeline: Fix typo Conecpt in pipeline

--- a/Pipelines/TF8040Samples.yml
+++ b/Pipelines/TF8040Samples.yml
@@ -92,7 +92,7 @@ jobs:
   #------------------------------------------------------------------------------------
   - template: CreateSampleArchive.yml
     parameters:
-      sampleName: Conecpt Samples
+      sampleName: Concept Samples
       version: $(Version.NuGetVersion)
       archivesFolder: $(ArchivesFolder)
 
