Samples: Bump version to 2.3.0
- ConceptSamples: Update to TF8040 v5.3.0.0
- TemplateSamples: Update to TF8040 v5.3.0.0
- Update pipeline

Related work items: #125138

--- a/Concept Samples/HMI/TF8040 Concept Samples HMI/Properties/tchmiconfig.tpl.json
+++ b/Concept Samples/HMI/TF8040 Concept Samples HMI/Properties/tchmiconfig.tpl.json
@@ -166,6 +166,22 @@
         "persist": false,
         "readonly": false
       }
+    },
+    "themedResources": {
+      "AvatarIcon": {
+        "type": "tchmi:framework#/definitions/Path",
+        "values": {
+          "Base": "Themes/Base/Images/Avatar.svg",
+          "Base-Dark": "Themes/Base-Dark/Images/Avatar.svg"
+        }
+      },
+      "TemperatureIcon": {
+        "type": "tchmi:framework#/definitions/Path",
+        "values": {
+          "Base": "Themes/Base/Images/Temperature.svg",
+          "Base-Dark": "Themes/Base-Dark/Images/Temperature.svg"
+        }
+      }
     }
   },
   "trigger": [
