--- a/Template Samples/HMI/TF8040 Template Samples HMI/Server/TcHmiSrv/TcHmiSrv.Config.default.json
+++ b/Template Samples/HMI/TF8040 Template Samples HMI/Server/TcHmiSrv/TcHmiSrv.Config.default.json
@@ -4952,7 +4952,7 @@
         "BaSite": {
             "ENABLED": true,
             "NAME": "BaSite",
-            "PATH": "..\\..\\Packages\\Beckhoff.TwinCAT.HMI.BA.BaSite.2.2.1\\runtimes\\any\\native\\",
+            "PATH": "..\\..\\Packages\\Beckhoff.TwinCAT.HMI.BA.BaSite.2.4.0\\runtimes\\any\\native\\",
             "REQUIRED": false,
             "STARTUPTYPE": 1
         },
@@ -6185,6 +6185,55 @@
             },
             "USEMAPPING": true
         },
+        "BaSite.DeleteTrendCollection": {
+            "ACCESS": 3,
+            "DOMAIN": "BaSite",
+            "DYNAMIC": false,
+            "HIDDEN": true,
+            "MAPPING": "DeleteTrendCollection",
+            "OPTIONS": {},
+            "SCHEMA": {
+                "function": true,
+                "writeValue": {
+                    "properties": {
+                        "trendCollectionName": {
+                            "type": "string"
+                        },
+                        "userName": {
+                            "type": "string"
+                        }
+                    },
+                    "type": "object"
+                }
+            },
+            "USEMAPPING": true
+        },
+        "BaSite.DeleteUserData": {
+            "ACCESS": 3,
+            "DOMAIN": "BaSite",
+            "DYNAMIC": false,
+            "HIDDEN": true,
+            "MAPPING": "DeleteUserData",
+            "OPTIONS": {},
+            "SCHEMA": {
+                "function": true,
+                "writeValue": {
+                    "properties": {
+                        "data": {
+                            "type": "object"
+                        },
+                        "subject": {
+                            "type": "string"
+                        },
+                        "userName": {
+                            "type": "string"
+                        }
+                    },
+                    "type": "object"
+                }
+            },
+            "USEMAPPING": true
+        },
         "BaSite.Diagnostics": {
             "ACCESS": 1,
             "DOMAIN": "BaSite",
@@ -6624,6 +6673,49 @@
             },
             "USEMAPPING": true
         },
+        "BaSite.LoadTrendCollections": {
+            "ACCESS": 3,
+            "DOMAIN": "BaSite",
+            "DYNAMIC": false,
+            "HIDDEN": true,
+            "MAPPING": "LoadTrendCollections",
+            "OPTIONS": {},
+            "SCHEMA": {
+                "function": true,
+                "writeValue": {
+                    "properties": {
+                        "userName": {
+                            "type": "string"
+                        }
+                    },
+                    "type": "object"
+                }
+            },
+            "USEMAPPING": true
+        },
+        "BaSite.LoadUserData": {
+            "ACCESS": 3,
+            "DOMAIN": "BaSite",
+            "DYNAMIC": false,
+            "HIDDEN": true,
+            "MAPPING": "LoadUserData",
+            "OPTIONS": {},
+            "SCHEMA": {
+                "function": true,
+                "writeValue": {
+                    "properties": {
+                        "subject": {
+                            "type": "string"
+                        },
+                        "userName": {
+                            "type": "string"
+                        }
+                    },
+                    "type": "object"
+                }
+            },
+            "USEMAPPING": true
+        },
         "BaSite.RemoveBaObjectFromAssignedTrends": {
             "ACCESS": 3,
             "DOMAIN": "BaSite",
@@ -6639,6 +6731,80 @@
                             "type": "string"
                         },
                         "DeviceName": {
+                            "type": "string"
+                        }
+                    },
+                    "type": "object"
+                }
+            },
+            "USEMAPPING": true
+        },
+        "BaSite.SaveTrendCollection": {
+            "ACCESS": 3,
+            "DOMAIN": "BaSite",
+            "DYNAMIC": false,
+            "HIDDEN": true,
+            "MAPPING": "SaveTrendCollection",
+            "OPTIONS": {},
+            "SCHEMA": {
+                "function": true,
+                "writeValue": {
+                    "properties": {
+                        "baObjects": {
+                            "items": {
+                                "properties": {
+                                    "deviceName": {
+                                        "type": "string"
+                                    },
+                                    "instancePath": {
+                                        "type": "string"
+                                    }
+                                },
+                                "type": "object"
+                            },
+                            "type": "array"
+                        },
+                        "root": {
+                            "properties": {
+                                "deviceName": {
+                                    "type": "string"
+                                },
+                                "instancePath": {
+                                    "type": "string"
+                                }
+                            },
+                            "type": "object"
+                        },
+                        "trendCollectionName": {
+                            "type": "string"
+                        },
+                        "userName": {
+                            "type": "string"
+                        }
+                    },
+                    "type": "object"
+                }
+            },
+            "USEMAPPING": true
+        },
+        "BaSite.SaveUserData": {
+            "ACCESS": 3,
+            "DOMAIN": "BaSite",
+            "DYNAMIC": false,
+            "HIDDEN": true,
+            "MAPPING": "SaveUserData",
+            "OPTIONS": {},
+            "SCHEMA": {
+                "function": true,
+                "writeValue": {
+                    "properties": {
+                        "data": {
+                            "type": "object"
+                        },
+                        "subject": {
+                            "type": "string"
+                        },
+                        "userName": {
                             "type": "string"
                         }
                     },
@@ -8827,6 +8993,8 @@
                 "BaSite.ChangeLocale": 3,
                 "BaSite.CheckBaDeviceMapping": 3,
                 "BaSite.ConfirmBaObject": 3,
+                "BaSite.DeleteTrendCollection": 3,
+                "BaSite.DeleteUserData": 3,
                 "BaSite.EventCountPerType": 3,
                 "BaSite.EventHistory": 3,
                 "BaSite.Events": 3,
@@ -8840,7 +9008,11 @@
                 "BaSite.GetPeriodicallyUpdatedVariableIDs": 3,
                 "BaSite.GetReferringObjects": 3,
                 "BaSite.GetUnits": 3,
+                "BaSite.LoadTrendCollections": 3,
+                "BaSite.LoadUserData": 3,
                 "BaSite.RemoveBaObjectFromAssignedTrends": 3,
+                "BaSite.SaveTrendCollection": 3,
+                "BaSite.SaveUserData": 3,
                 "ChangeUserSettings": 3,
                 "ConfirmAlarm": 3,
                 "CreateEvent": 3,
@@ -8943,9 +9115,9 @@
     "VIRTUALDIRECTORIES": {
         "/": "..\\..\\TF8040 Template Samples HMI\\",
         "/Beckhoff.TwinCAT.HMI.BA.BaSite": "..\\..\\Packages\\Beckhoff.TwinCAT.HMI.BA.BaSite.2.2.1",
-        "/Beckhoff.TwinCAT.HMI.BA.Controls": "..\\..\\Packages\\Beckhoff.TwinCAT.HMI.BA.Controls.2.2.1\\runtimes\\native1.12-tchmi",
-        "/Beckhoff.TwinCAT.HMI.BA.Framework": "..\\..\\Packages\\Beckhoff.TwinCAT.HMI.BA.Framework.2.2.1\\runtimes\\native1.12-tchmi",
-        "/Beckhoff.TwinCAT.HMI.BA.Icons": "..\\..\\Packages\\Beckhoff.TwinCAT.HMI.BA.Icons.2.2.1\\runtimes\\native1.12-tchmi",
+        "/Beckhoff.TwinCAT.HMI.BA.Controls": "..\\..\\Packages\\Beckhoff.TwinCAT.HMI.BA.Controls.2.4.0\\runtimes\\native1.12-tchmi",
+        "/Beckhoff.TwinCAT.HMI.BA.Framework": "..\\..\\Packages\\Beckhoff.TwinCAT.HMI.BA.Framework.2.4.0\\runtimes\\native1.12-tchmi",
+        "/Beckhoff.TwinCAT.HMI.BA.Icons": "..\\..\\Packages\\Beckhoff.TwinCAT.HMI.BA.Icons.2.4.0\\runtimes\\native1.12-tchmi",
         "/Beckhoff.TwinCAT.HMI.Controls": "..\\..\\Packages\\Beckhoff.TwinCAT.HMI.Controls.12.758.8\\runtimes\\native1.12-tchmi",
         "/Beckhoff.TwinCAT.HMI.Functions": "..\\..\\Packages\\Beckhoff.TwinCAT.HMI.Functions.12.758.8\\runtimes\\native1.12-tchmi",
         "/Beckhoff.TwinCAT.HMI.ResponsiveNavigation": "..\\..\\Packages\\Beckhoff.TwinCAT.HMI.ResponsiveNavigation.12.758.8\\runtimes\\native1.12-tchmi",
