--- a/Concept Samples/HMI/TF8040 Concept Samples HMI/Server/TcHmiSrv/TcHmiSrv.Config.default.json
+++ b/Concept Samples/HMI/TF8040 Concept Samples HMI/Server/TcHmiSrv/TcHmiSrv.Config.default.json
@@ -19894,7 +19894,7 @@
         "BaSite": {
             "ENABLED": true,
             "NAME": "BaSite",
-            "PATH": "..\\..\\Packages\\Beckhoff.TwinCAT.HMI.BA.BaSite.2.2.1\\runtimes\\any\\native\\",
+            "PATH": "..\\..\\Packages\\Beckhoff.TwinCAT.HMI.BA.BaSite.2.4.0\\runtimes\\any\\native\\",
             "REQUIRED": false,
             "STARTUPTYPE": 1
         },
@@ -21156,6 +21156,55 @@
             },
             "USEMAPPING": true
         },
+        "BaSite.DeleteTrendCollection": {
+            "ACCESS": 3,
+            "DOMAIN": "BaSite",
+            "DYNAMIC": false,
+            "HIDDEN": true,
+            "MAPPING": "DeleteTrendCollection",
+            "OPTIONS": {},
+            "SCHEMA": {
+                "function": true,
+                "writeValue": {
+                    "properties": {
+                        "trendCollectionName": {
+                            "type": "string"
+                        },
+                        "userName": {
+                            "type": "string"
+                        }
+                    },
+                    "type": "object"
+                }
+            },
+            "USEMAPPING": true
+        },
+        "BaSite.DeleteUserData": {
+            "ACCESS": 3,
+            "DOMAIN": "BaSite",
+            "DYNAMIC": false,
+            "HIDDEN": true,
+            "MAPPING": "DeleteUserData",
+            "OPTIONS": {},
+            "SCHEMA": {
+                "function": true,
+                "writeValue": {
+                    "properties": {
+                        "data": {
+                            "type": "object"
+                        },
+                        "subject": {
+                            "type": "string"
+                        },
+                        "userName": {
+                            "type": "string"
+                        }
+                    },
+                    "type": "object"
+                }
+            },
+            "USEMAPPING": true
+        },
         "BaSite.Diagnostics": {
             "ACCESS": 1,
             "DOMAIN": "BaSite",
@@ -21595,6 +21644,49 @@
             },
             "USEMAPPING": true
         },
+        "BaSite.LoadTrendCollections": {
+            "ACCESS": 3,
+            "DOMAIN": "BaSite",
+            "DYNAMIC": false,
+            "HIDDEN": true,
+            "MAPPING": "LoadTrendCollections",
+            "OPTIONS": {},
+            "SCHEMA": {
+                "function": true,
+                "writeValue": {
+                    "properties": {
+                        "userName": {
+                            "type": "string"
+                        }
+                    },
+                    "type": "object"
+                }
+            },
+            "USEMAPPING": true
+        },
+        "BaSite.LoadUserData": {
+            "ACCESS": 3,
+            "DOMAIN": "BaSite",
+            "DYNAMIC": false,
+            "HIDDEN": true,
+            "MAPPING": "LoadUserData",
+            "OPTIONS": {},
+            "SCHEMA": {
+                "function": true,
+                "writeValue": {
+                    "properties": {
+                        "subject": {
+                            "type": "string"
+                        },
+                        "userName": {
+                            "type": "string"
+                        }
+                    },
+                    "type": "object"
+                }
+            },
+            "USEMAPPING": true
+        },
         "BaSite.RemoveBaObjectFromAssignedTrends": {
             "ACCESS": 3,
             "DOMAIN": "BaSite",
@@ -21610,6 +21702,80 @@
                             "type": "string"
                         },
                         "DeviceName": {
+                            "type": "string"
+                        }
+                    },
+                    "type": "object"
+                }
+            },
+            "USEMAPPING": true
+        },
+        "BaSite.SaveTrendCollection": {
+            "ACCESS": 3,
+            "DOMAIN": "BaSite",
+            "DYNAMIC": false,
+            "HIDDEN": true,
+            "MAPPING": "SaveTrendCollection",
+            "OPTIONS": {},
+            "SCHEMA": {
+                "function": true,
+                "writeValue": {
+                    "properties": {
+                        "baObjects": {
+                            "items": {
+                                "properties": {
+                                    "deviceName": {
+                                        "type": "string"
+                                    },
+                                    "instancePath": {
+                                        "type": "string"
+                                    }
+                                },
+                                "type": "object"
+                            },
+                            "type": "array"
+                        },
+                        "root": {
+                            "properties": {
+                                "deviceName": {
+                                    "type": "string"
+                                },
+                                "instancePath": {
+                                    "type": "string"
+                                }
+                            },
+                            "type": "object"
+                        },
+                        "trendCollectionName": {
+                            "type": "string"
+                        },
+                        "userName": {
+                            "type": "string"
+                        }
+                    },
+                    "type": "object"
+                }
+            },
+            "USEMAPPING": true
+        },
+        "BaSite.SaveUserData": {
+            "ACCESS": 3,
+            "DOMAIN": "BaSite",
+            "DYNAMIC": false,
+            "HIDDEN": true,
+            "MAPPING": "SaveUserData",
+            "OPTIONS": {},
+            "SCHEMA": {
+                "function": true,
+                "writeValue": {
+                    "properties": {
+                        "data": {
+                            "type": "object"
+                        },
+                        "subject": {
+                            "type": "string"
+                        },
+                        "userName": {
                             "type": "string"
                         }
                     },
@@ -24584,6 +24750,8 @@
                 "BaSite.ChangeLocale": 3,
                 "BaSite.CheckBaDeviceMapping": 3,
                 "BaSite.ConfirmBaObject": 3,
+                "BaSite.DeleteTrendCollection": 3,
+                "BaSite.DeleteUserData": 3,
                 "BaSite.EventCountPerType": 3,
                 "BaSite.EventHistory": 3,
                 "BaSite.Events": 3,
@@ -24599,7 +24767,11 @@
                 "BaSite.GetReferringObjects": 3,
                 "BaSite.GetUnits": 3,
                 "BaSite.GetValueRange": 3,
+                "BaSite.LoadTrendCollections": 3,
+                "BaSite.LoadUserData": 3,
                 "BaSite.RemoveBaObjectFromAssignedTrends": 3,
+                "BaSite.SaveTrendCollection": 3,
+                "BaSite.SaveUserData": 3,
                 "ChangeUserSettings": 3,
                 "ConfirmAlarm": 3,
                 "CreateEvent": 3,
@@ -24714,9 +24886,9 @@
     "VIDEOSEGMENTSIZE": 1048576,
     "VIRTUALDIRECTORIES": {
         "/": "..\\..\\TF8040 Concept Samples HMI\\",
-        "/Beckhoff.TwinCAT.HMI.BA.Controls": "..\\..\\Packages\\Beckhoff.TwinCAT.HMI.BA.Controls.2.2.1\\runtimes\\native1.12-tchmi",
-        "/Beckhoff.TwinCAT.HMI.BA.Framework": "..\\..\\Packages\\Beckhoff.TwinCAT.HMI.BA.Framework.2.2.1\\runtimes\\native1.12-tchmi",
-        "/Beckhoff.TwinCAT.HMI.BA.Icons": "..\\..\\Packages\\Beckhoff.TwinCAT.HMI.BA.Icons.2.2.1\\runtimes\\native1.12-tchmi",
+        "/Beckhoff.TwinCAT.HMI.BA.Controls": "..\\..\\Packages\\Beckhoff.TwinCAT.HMI.BA.Controls.2.4.0\\runtimes\\native1.12-tchmi",
+        "/Beckhoff.TwinCAT.HMI.BA.Framework": "..\\..\\Packages\\Beckhoff.TwinCAT.HMI.BA.Framework.2.4.0\\runtimes\\native1.12-tchmi",
+        "/Beckhoff.TwinCAT.HMI.BA.Icons": "..\\..\\Packages\\Beckhoff.TwinCAT.HMI.BA.Icons.2.4.0\\runtimes\\native1.12-tchmi",
         "/Beckhoff.TwinCAT.HMI.BA.ServerExtension": "..\\..\\Packages\\Beckhoff.TwinCAT.HMI.BA.ServerExtension.1.3.1",
         "/Beckhoff.TwinCAT.HMI.Controls": "..\\..\\Packages\\Beckhoff.TwinCAT.HMI.Controls.12.758.8\\runtimes\\native1.12-tchmi",
         "/Beckhoff.TwinCAT.HMI.Functions": "..\\..\\Packages\\Beckhoff.TwinCAT.HMI.Functions.12.758.8\\runtimes\\native1.12-tchmi",
