Samples HMI: Update packages

--- a/Template Samples/HMI/TF8040 Template Samples HMI/Server/TcHmiUserManagement/TcHmiUserManagement.Config.default.json
+++ b/Template Samples/HMI/TF8040 Template Samples HMI/Server/TcHmiUserManagement/TcHmiUserManagement.Config.default.json
@@ -1,46 +1,52 @@
 {
-  "USERS": {
-    "__SystemAdministrator": {
-      "ALGORITHM": 0,
-      "ENABLED": false,
-      "PASSWORD": "",
-      "SALT": ""
-    },
-    "__SystemGuest": {
-      "ALGORITHM": 0,
-      "ENABLED": true,
-      "PASSWORD": "",
-      "SALT": ""
-    },
-    "Guest User": {
-      "ALGORITHM": 1,
-      "ENABLED": true,
-      "PASSWORD": "",
-      "SALT": ""
-    },
-    "Basic User": {
-      "ALGORITHM": 1,
-      "ENABLED": true,
-      "PASSWORD": "",
-      "SALT": ""
-    },
-    "Advanced User": {
-      "ALGORITHM": 1,
-      "ENABLED": true,
-      "PASSWORD": "",
-      "SALT": ""
-    },
-    "Expert User": {
-      "ALGORITHM": 1,
-      "ENABLED": true,
-      "PASSWORD": "",
-      "SALT": ""
-    },
-    "Internal User": {
-      "ALGORITHM": 1,
-      "ENABLED": true,
-      "PASSWORD": "",
-      "SALT": ""
+    "USERS": {
+        "Advanced User": {
+            "ALGORITHM": 1,
+            "ENABLED": true,
+            "PASSWORD": "",
+            "SALT": ""
+        },
+        "Basic User": {
+            "ALGORITHM": 1,
+            "ENABLED": true,
+            "PASSWORD": "",
+            "SALT": ""
+        },
+        "Expert User": {
+            "ALGORITHM": 1,
+            "ENABLED": true,
+            "PASSWORD": "",
+            "SALT": ""
+        },
+        "Guest User": {
+            "ALGORITHM": 1,
+            "ENABLED": true,
+            "PASSWORD": "",
+            "SALT": ""
+        },
+        "Internal User": {
+            "ALGORITHM": 1,
+            "ENABLED": true,
+            "PASSWORD": "",
+            "SALT": ""
+        },
+        "__SystemAdministrator": {
+            "ALGORITHM": 0,
+            "ENABLED": false,
+            "PASSWORD": "",
+            "SALT": ""
+        },
+        "__SystemGuest": {
+            "ALGORITHM": 0,
+            "ENABLED": true,
+            "PASSWORD": "",
+            "SALT": ""
+        },
+        "__SystemUser": {
+            "ALGORITHM": 0,
+            "ENABLED": true,
+            "PASSWORD": "",
+            "SALT": ""
+        }
     }
-  }
 }
