--- a/Concept Samples/HMI/TF8040 Concept Samples HMI/Properties/tchmiconfig.json
+++ b/Concept Samples/HMI/TF8040 Concept Samples HMI/Properties/tchmiconfig.json
@@ -1,5 +1,5 @@
-﻿{
-  "$schema": "./../../Packages/Beckhoff.TwinCAT.HMI.Framework.12.758.8/runtimes/native1.12-tchmi/Schema/TchmiConfig.Schema.json",
+{
+  "$schema": "./../../Packages/Beckhoff.TwinCAT.HMI.Framework.12.760.42/runtimes/native1.12-tchmi/Schema/TchmiConfig.Schema.json",
   "basePath": "./framework",
   "scaleMode": "None",
   "startupView": "Desktop.view",
@@ -25,7 +25,8 @@
           "type": "Stylesheet"
         }
       ],
-      "replacesThemeForControls": []
+      "replacesThemeForControls": [],
+      "replacesThemeForPackageComponents": []
     },
     "Base": {
       "resources": [
@@ -40,7 +41,8 @@
           "type": "Stylesheet"
         }
       ],
-      "replacesThemeForControls": []
+      "replacesThemeForControls": [],
+      "replacesThemeForPackageComponents": []
     }
   },
   "dependencyFiles": [
@@ -185,6 +187,7 @@
     "themedResources": {
       "AvatarIcon": {
         "type": "tchmi:framework#/definitions/Path",
+        "description": "",
         "values": {
           "Base": "Themes/Base/Images/Avatar.svg",
           "Base-Dark": "Themes/Base-Dark/Images/Avatar.svg"
@@ -192,6 +195,7 @@
       },
       "TemperatureIcon": {
         "type": "tchmi:framework#/definitions/Path",
+        "description": "",
         "values": {
           "Base": "Themes/Base/Images/Temperature.svg",
           "Base-Dark": "Themes/Base-Dark/Images/Temperature.svg"
@@ -297,5 +301,23 @@
     {
       "url": "KeyboardLayouts/US - compact.keyboard.json"
     }
-  ]
+  ],
+  "systemKeyboard": {
+    "providerName": "",
+    "projectKeyboardMapping": {
+      "de-DE": {
+        "text": "",
+        "decimal": "",
+        "numeric": ""
+      },
+      "en-US": {
+        "text": "",
+        "decimal": "",
+        "numeric": ""
+      }
+    }
+  },
+  "systemPopups": {
+    "providerName": "Beckhoff.TcHmiPopups"
+  }
 }
