--- a/Concept Samples/HMI/TF8040 Concept Samples HMI/Server/TcHmiUserManagement/TcHmiUserManagement.Config.default.json
+++ b/Concept Samples/HMI/TF8040 Concept Samples HMI/Server/TcHmiUserManagement/TcHmiUserManagement.Config.default.json
@@ -41,6 +41,12 @@
             "ENABLED": true,
             "PASSWORD": "",
             "SALT": ""
+        },
+        "__SystemUser": {
+            "ALGORITHM": 0,
+            "ENABLED": true,
+            "PASSWORD": "",
+            "SALT": ""
         }
     }
 }
