--- a/Concept Samples/HMI/TF8040 Concept Samples HMI/Server/BaSite/BaSite.Config.default.json
+++ b/Concept Samples/HMI/TF8040 Concept Samples HMI/Server/BaSite/BaSite.Config.default.json
@@ -10,5 +10,23 @@
             "NETID": "127.0.0.1.1.1",
             "PORT": 851
         }
+    },
+    "USERLEVEL": {
+        "LEVEL_ADVANCED": [
+            "Advanced"
+        ],
+        "LEVEL_BASIC": [
+            "Basic"
+        ],
+        "LEVEL_EXPERT": [
+            "Expert"
+        ],
+        "LEVEL_GUEST": [
+            "Guest"
+        ],
+        "LEVEL_INTERNAL": [
+            "Internal",
+            "__SystemAdministrators"
+        ]
     }
 }
